--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,25 @@
 body {
     background-color: lightgray;
 }
-h1 {
-	background-color:blue;
-}
 h2 {
     background-color:red;
 }
 p {
     background-color:black;
 	color:white;
-	border: 2px solid purple;
-	padding: 20px;
+	border:5px solid blue;
+	padding:20px;
 } 
-img.pokemon {
-	float: center;
+.center-whole {
+	text-align:center;
+}
+.blue-bg {
+	background-color:blue;
+}
+.black-bg {
+	background-color:black;
+	color:white;
+}
+.red-bg {
+	background-color:red;
 }
