--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
-    background-color: lightgray;
+    background-color: gray;
+	margin:0px;
+	border: 5px solid blue;
+	padding: 10px;
 }
 h1 {
     text-align:center;
@@ -19,6 +22,15 @@ h2.white-text {
 .right-side {
 	text-align:right;
 }
+.left-side {
+	text-align:left;
+}
+.right-float {
+	float:right;
+}
+.left-float {
+	float:left;
+}
 .blue-bg {
 	background-color:blue;
 }
@@ -36,15 +48,38 @@ img.overwatch-dps {
 	width:100px;
 	height:100px;
 	background-color:light-gray;
+	margin:5px;
 	border:5px solid red;
 	padding:0px;
 	float:right;
 }
-img.overwatch-tank {
+img.overwatch-dps-heal {
 	width:100px;
 	height:100px;
 	background-color:light-gray;
+	margin:5px;
+	border-top:5px solid red;
+	border-left:5px solid red;
+	border-bottom:5px solid yellow;
+	border-right:5px solid yellow;
+	padding:0px;
+	float:right;
+}
+img.overwatch-tank-main {
+	width:100px;
+	height:100px;
+	background-color:light-gray;
+	margin:5px;
 	border:5px solid turquoise;
+	padding:0px;
+	float:right;
+}
+img.overwatch-tank-off {
+	width:100px;
+	height:100px;
+	background-color:light-gray;
+	margin:5px;
+	border:5px solid #DDA0DD;
 	padding:0px;
 	float:right;
 }
@@ -52,6 +87,7 @@ img.overwatch-defense {
 	width:100px;
 	height:100px;
 	background-color:light-gray;
+	margin:5px;
 	border:5px solid orange;
 	padding:0px;
 	float:right;
@@ -60,6 +96,7 @@ img.overwatch-healer {
 	width:100px;
 	height:100px;
 	background-color:light-gray;
+	margin:5px;
 	border:5px solid yellow;
 	padding:0px;
 	float:right;
@@ -74,6 +111,9 @@ img.overwatch-healer {
 .red-text {
 	color:red;
 }
+.maroon-text {
+	color:maroon;
+}
 .turquoise-text {
 	color:turquoise;
 }
@@ -82,4 +122,13 @@ img.overwatch-healer {
 }
 .white-text {
 	color:white;
+}
+.tan-text {
+	color:#d2b48c;
+}
+.navy-text {
+	color:navy;
+}
+.lavender-text {
+	color:#eedcfd;
 }
