--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,17 @@ h2.white-text {
 	border:5px solid blue;
 	padding:20px;
 } 
+.gray-button {
+    background-color: gray; /* Green */
+    border: none;
+    color: white;
+    padding:10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+	border-radius: 5px;
+    font-size: 16px;
+} 
 .center-whole {
 	text-align:center;
 }
