Added back the mobile formatting

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
 	font-family:sans-serif;
-    background: linear-gradient(to right, #003399 0%, #660066 100%);
+    background: #3B4E7F;
 	margin:0px;
 	border:0px;
 	off-set:black;
