--- a/sub-cites/pokemon-styles.css
+++ b/sub-cites/pokemon-styles.css
@@ -2,8 +2,7 @@ body {
 	font-family:sans-serif;
     background-color: #3B4E7F;
 	margin:0px;
-	border: 5px solid black;
-	off-set:black;
+	border:0px;
 	padding: 10px;
 }
 h1 {
