--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ h2.white-text {
 	text-align:center;
 	color:white;
 }
+a:link {
+	color:white;
+	text-decoration:none;
+}
+a:visited {
+	color:white;
+	text-decoration:none;
+}
 .black-box {
     background-color:black;
 	border:5px solid blue;
