Added 'Back' buttons

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ a:visited {
     display: inline-block;
 	border-radius: 5px;
     font-size: 16px;
+	cursor: pointer;
 } 
 .center-whole {
 	text-align:center;
