--- a/sub-cites/sub-styles.css
+++ b/sub-cites/sub-styles.css
@@ -65,6 +65,18 @@ a:visited {
 .red-bg {
 	background-color:red;
 }
+.red-outline {
+	border: 2px solid #ff4d4d;
+	padding: 5px
+}
+.blue-outline {
+	border: 2px solid #8080ff;
+	padding: 5px
+}
+.yellow-outline {
+	border: 2px solid #ffff99;
+	padding: 5px
+}
 .extra-box-padding {
 	padding:5px;
 }
