Added mini calculator and changed links

--- a/sub-cites/sub-styles.css
+++ b/sub-cites/sub-styles.css
@@ -8,9 +8,13 @@ body {
 h1 {
     text-align:center;
 }
-h2.white-text {
+h2 {
 	text-align:center;
 	color:white;
+}
+h3 {
+	text-align:center;
+	color:red;
 }
 .button {
 	
