--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ img.profile-pic {
 	margin:5px;
 	border:5px solid gray;
 	padding:0px;
-	float:left;
+	text-align:center;
 }
 .yellow-text {
 	color:yellow;
