--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,10 @@ transform: rotate(270deg);
 img.rotate180 {
 	transform: rotate(180deg);
 }
+img.overwatch-logo{
+	background-color: white;
+	border:5px solid gray;
+}
 img.overwatch-small {
 	width:100px;
 	height:100px;
