--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,17 @@ a:visited {
     font-size: 16px;
 	cursor: pointer;
 }
+.gray-box {
+    background-color: gray;
+    border: none;
+    color: white;
+    padding:10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+	border-radius: 5px;
+    font-size: 16px;
+}
 .damage-headline-left {
     background-color: #ff4d4d;
     border: none;
@@ -401,7 +412,7 @@ form.center {
 	color:#d2b48c;
 }
 .draco-text {
-	color:#7359d1;
+	color:#5c47a7;
 }
 .lavender-text {
 	color:#eedcfd;
