--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,20 @@ a:visited {
     font-size: 16px;
 	width:80px;
 }	
-.gamertag-headline {
+.xbox-headline {
+	background-color: white;
+    border: none;
+    color: #56af62;
+    padding:10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+    font-size: 16px;
+	width:60px;
+}	
+.xbox-gamertag {
 	background-color: #56af62;
     border: none;
     color: white;
@@ -181,37 +194,47 @@ a:visited {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-	border-top-left-radius: 20px;
-	border-bottom-left-radius: 20px;
-		border-top-right-radius: 20px;
+	border-top-right-radius: 20px;
 	border-bottom-right-radius: 20px;
     font-size: 16px;
-	width:240px;
-}	
-.pctag-headline {
-	background-color: #66ff84;
-    border: none;
-    color: #282828;
+	width:160px;
+	
+}
+.pc-headline {
+	background-color: #282828;
+    color: white;
     padding:10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
 	border-top-left-radius: 20px;
 	border-bottom-left-radius: 20px;
-		border-top-right-radius: 20px;
+    font-size: 16px;
+	width: 60px;
+}	
+.pc-gamertag {
+	background-color: white;
+    color: #282828;
+    padding:10px;
+    text-align: center;
+	font: bold;
+    text-decoration: none;
+    display: inline-block;
+	border-top-right-radius: 20px;
 	border-bottom-right-radius: 20px;
     font-size: 16px;
-	width:240px;
+	width:160px;
 }	
 .container {
 	display: flex;
+	justify-content: space-between;
 }
 .center-whole {
 	text-align:center;
 }
 .left-half {
 	width: 50%;
-
+	float: left;
 	}
 .right-half {
 	width: 50%;
@@ -222,18 +245,30 @@ a:visited {
 	float: left;
 }
 .middle-third {
+	width: 30%;
 }
 .right-third {
 	width: 30%;
 	float: right;
 }
-.left-side {
+.left-side-ow {
+	width: 75%;
+	float: left;
+}
+.right-side-ow {
+	width: 25%;
+	float: right;
+	text-align: right;
+}
+.left-side-poke {
 	width: 70%;
 	float: left;
 }
-.right-side {
-	width: 20%;
+.right-side-poke {
+	width: 30%;
 	float: right;
+	text-align: center;
+	margin-left: 10px;
 }
 .right-float {
 	float:right;
@@ -254,22 +289,29 @@ a:visited {
 	border: 3px solid white;
 	padding: 10px;
 	overflow: auto;	
-	
+}
+.gray-outline {
+	border: 3px solid #bababa;
+	padding: 10px;
+	overflow: auto;	
 }
 .red-outline {
 	border: 3px solid #ff4d4d;
 	padding: 5px;
 	overflow: auto;
+	margin-bottom: 15px;
 }
 .blue-outline {
 	border: 3px solid #8080ff;
 	padding: 5px;
 	overflow: auto;
+	margin-bottom: 15px;
 }
 .yellow-outline {
 	border: 3px solid #ffff99;
 	padding: 5px;
 	overflow: auto;
+	margin-bottom: 15px;
 }
 .extra-box-padding {
 	padding:5px;
