--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,6 @@ a:visited {
 	border-bottom-right-radius: 20px;
     font-size: 16px;
 	width:160px;
-	
 }
 .pc-headline {
 	background-color: #282828;
@@ -324,7 +323,7 @@ img.profile-pic {
 	height:200px;
 	background-color:light-gray;
 	margin:5px;
-	border:5px solid gray;
+	border:5px solid #696969;
 	padding:0px;
 	text-align:center;
 }
