Added Poke Teambuilder page and removed some things

--- a/sub-cites/styles-poke.css
+++ b/sub-cites/styles-poke.css
@@ -36,3 +36,9 @@ img.poke-game-cover {
 	border-radius: 10px;
 	display: block;
 }
+.party-container {
+	display: flex;
+	justify-content: space-between;
+	padding: 100px;
+	margin: 10px;
+}
