--- a/sub-cites/styles-poke.css
+++ b/sub-cites/styles-poke.css
@@ -39,6 +39,19 @@ img.poke-game-cover {
 .party-container {
 	display: flex;
 	justify-content: space-between;
-	padding: 100px;
+	padding: 30px;
+	padding-bottom: 100px;
 	margin: 10px;
+	height: 150px;
+}
+.search-bar {
+	background-color: #aaaaaa;
+	border-radius: 5px;
+	width: 30%;
+	margin: auto;
+	padding: 10px;
+	text-align: center;
+}
+.team-outline {
+	border: 2px solid white;
 }
