--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ a:visited {
 .dead-middle {
 	text-align: center;
 	margin-top: 150px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 .game-nav {
 	width: 300px;
