--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ body {
 	border:0px;
 	padding: 10px;
 }
+body.margin-top {
+	margin-top: 100px;
+}
 h1 {
 	color:white;
     text-align:center;
@@ -25,7 +28,6 @@ a:visited {
 	text-decoration:none;
 }
 .dead-middle {
-	text-align: center;
 	margin-top: 150px;
 	display: flex;
 	justify-content: space-between;
@@ -70,6 +72,14 @@ a:visited {
 	border-radius: 5px;
     font-size: 16px;
 	cursor: pointer;
+	transition-duration: 0.3s;
+}
+.gray-button:hover {
+	background-color: #e6e6e6;
+	color: #282828; 
+}
+.gray-button-top {
+	margin: 2px;
 }
 .top-strip {
 	background-color: #282828;
@@ -170,13 +180,16 @@ img.profile-pic {
 	height:300px;
 	background-color:light-gray;
 	margin:5px;
-	border:5px solid #696969;
 	padding:0px;
 	text-align:center;
 }
 img.heading {
 	width: 300px;
 }	
+img.sombra-skull {
+	height: 80px;
+	animation: glow-sombra 5000ms infinite;
+}
 img.small-pic {
 	width: 150px;
 	height: 150px;
@@ -274,4 +287,20 @@ th {
 }
 .light-pink-text {
 	color:#ffb7fb;
+}
+
+@keyframes glow-sombra {
+  0% { filter: drop-shadow(0px 0px 0px #FF00FF); }
+  50% { filter: drop-shadow(0px 0px 15px #FF00FF); }
+  100% { filter: drop-shadow(0px 0px 0px #FF00FF); }
+}
+  
+@keyframes glowing {
+  0% { box-shadow: 0 0 -10px #CA6EFF; }
+  40% { box-shadow: 0 0 20px #CA6EFF; }
+  60% { box-shadow: 0 0 20px #CA6EFF; }
+  100% { box-shadow: 0 0 -10px #CA6EFF; }
+}
+.purple-glow {
+	animation: glow-sombra 5000ms infinite;
 }
