--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ img.profile-pic {
 	width:300px;
 	height:300px;
 	background-color:light-gray;
+	border: 3px solid #696969;
 	margin:5px;
 	padding:0px;
 	text-align:center;
@@ -292,7 +293,7 @@ th {
 @keyframes glow-sombra {
   0% { filter: drop-shadow(0px 0px 0px #FF00FF); }
   50% { filter: drop-shadow(0px 0px 15px #FF00FF); }
-  100% { filter: drop-shadow(0px 0px 0px #FF00FF); }
+  100% { filter: drop-shadow(0px 0px -2px #FF00FF); }
 }
   
 @keyframes glowing {
