--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,12 @@ a:link {
 a:visited {
 	text-decoration:none;
 }
+hr.index {
+    border: none;
+    height: 3px;
+    color: white;
+    background-color: white; /* Modern Browsers */
+}
 .dead-middle {
 	margin-top: 150px;
 	display: flex;
@@ -291,9 +297,10 @@ th {
 }
 
 @keyframes glow-sombra {
-  0% { filter: drop-shadow(0px 0px 0px #FF00FF); }
-  50% { filter: drop-shadow(0px 0px 15px #FF00FF); }
-  100% { filter: drop-shadow(0px 0px -2px #FF00FF); }
+  0% { filter: drop-shadow(0px 0px -1px #FF00FF); }
+  60% { filter: drop-shadow(0px 0px -1px #FF00FF); }
+  80% { filter: drop-shadow(0px 0px 15px #FF00FF); }
+  100% { filter: drop-shadow(0px 0px -1px #FF00FF); }
 }
   
 @keyframes glowing {
