--- a/sub-sites/styles-run.css
+++ b/sub-sites/styles-run.css
@@ -2,13 +2,28 @@
 	background-color: #1093af;
 	color: white;
 	padding: 10px;
+	width: 25%;
 }
 .result {
 	background-color: #b7c2c6;
 	color: white;
 	padding: 10px;
+	width: 75%;
 }
 .race-results {
 	width: 40%;
-	
+	margin: 10px;
+	display: flex;
+	flex-flow: column wrap;
+	align-items: center;
+}
+.organize {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-flow: row wrap;
+	align-content: stretch;
+}
+.full-width {
+	width: 100%;
 }
