--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ hr.index {
     background-color: white; /* Modern Browsers */
 }
 .dead-middle {
-	margin-top: 150px;
+	padding-top: 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -82,6 +82,7 @@ hr.index {
 }
 .gray-button:hover {
 	background-color: #e6e6e6;
+	color: #282828; 
 	color: #282828; 
 }
 .gray-button-top {
@@ -195,7 +196,7 @@ img.heading {
 }	
 img.sombra-skull {
 	height: 80px;
-	animation: glow-sombra 5000ms infinite;
+	filter: drop-shadow(0px 0px 10px #FF00FF);
 }
 img.small-pic {
 	width: 150px;
@@ -310,5 +311,5 @@ th {
   100% { box-shadow: 0 0 -10px #CA6EFF; }
 }
 .purple-glow {
-	animation: glow-sombra 5000ms infinite;
+	animation: glow-sombra 8000ms infinite;
 }
