--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,8 @@ hr.index {
 }
 .gray-button:hover {
 	background-color: #e6e6e6;
-	color: #282828; 
-	color: #282828; 
+	color: #282828;
+	filter: drop-shadow(0px 0px 10px #FF00FF);
 }
 .gray-button-top {
 	margin: 2px;
@@ -299,8 +299,7 @@ th {
 
 @keyframes glow-sombra {
   0% { filter: drop-shadow(0px 0px -1px #FF00FF); }
-  60% { filter: drop-shadow(0px 0px -1px #FF00FF); }
-  80% { filter: drop-shadow(0px 0px 15px #FF00FF); }
+  50% { filter: drop-shadow(0px 0px 15px #FF00FF); }
   100% { filter: drop-shadow(0px 0px -1px #FF00FF); }
 }
   
@@ -311,5 +310,5 @@ th {
   100% { box-shadow: 0 0 -10px #CA6EFF; }
 }
 .purple-glow {
-	animation: glow-sombra 8000ms infinite;
+	animation: glow-sombra 10000ms infinite;
 }
