--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@ hr.index {
     border: none;
     height: 3px;
     color: white;
-    background-color: white; /* Modern Browsers */
+    background-color: white;
+	width: 80%;
 }
 .dead-middle {
 	padding-top: 100px;
@@ -94,11 +95,39 @@ hr.index {
 .top-strip {
 	background-color: #282828;
 	width:100%;
+	height: 40px;
 	padding: 5px;
 	position: fixed;
 	top:0px;
 	left:0px;
 	z-index: 5;
+}
+.back-button {
+	background-color: #696969;
+    border: none;
+    color: white;
+    padding:10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+	border-radius: 5px;
+    font-size: 16px;
+	cursor: pointer;
+	transition-duration: 0.3s;
+	position: fixed;
+	top:5px;
+	left:5px;
+	z-index: 5;
+}
+.back-button:hover {
+	background-color: #e6e6e6;
+	color: #282828;
+	filter: drop-shadow(0px 0px 10px #FF00FF);
+}
+.page-title {
+	color: white;
+	font-family:sans-serif;
+	font-size: 25pt;
 }
 .container {
 	display: flex;
