--- a/sub-sites/styles-overwatch.css
+++ b/sub-sites/styles-overwatch.css
@@ -251,3 +251,9 @@ img.overwatch-heal-speed {
 	border-radius: 10px;
 	font-size: 12pt;
 }
+.purple-box {
+	background-color: #BA55D3;
+	padding: 5px;
+	border-radius: 10px;
+	font-size: 12pt;
+}
