--- a/sub-sites/styles-poke-battle.css
+++ b/sub-sites/styles-poke-battle.css
@@ -15,6 +15,7 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	align-items: flex-start;
+	visibility: hidden;
 }
 .left-side {
 	width: 50%;
@@ -35,13 +36,14 @@
 	height: 15%;
 	width: auto;
 	padding: 1%;
+	visibility: hidden;
 }
 .moves-area {
 	width: 100%;
 	height: 10%;
 	display: flex;
 	justify-content: space-between;
-	visibility: visible;
+	visibility: hidden;
 }	
 .move-button {
 	width: 24%;
